# location-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  CODEBUDDY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  README.md.en  README_EN.md
.specify/memory/: constitution.md
.trae/workflows/: speckit.plan.md
resources/: countries.json  patterns.json  settings.json
specs/001-country-code-parser/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-country-code-parser/checklists/: implementation-checklist.md  requirements.md
specs/001-country-code-parser/contracts/: api.md
src/: config.rs  error.rs  lib.rs  parser.rs
tests/: lib_tests.rs  mod.rs
tests/unit/: mod.rs  parser_tests.rs
