[package]
name = "location-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing country codes from text titles"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

# 更多字段可以在这里添加
[package.metadata.docs.rs]
# 为docs.rs启用所有特性
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
isocountry = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false

[features]
default = []
serde = ["dep:serde"]