[package]
name = "location-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing country codes from text titles with support for Chinese language"
authors = ["AI Generated Code <chenxxpro@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chenxxpro/location-rs"
documentation = "https://docs.rs/location-rs"
keywords = ["location", "country", "iso", "parser", "geography"]
categories = ["parsing", "internationalization", "data-structures"]

# 更多字段可以在这里添加
[package.metadata.docs.rs]
# 为docs.rs启用所有特性
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
isocountry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = []